--- a/src/static/index.html
+++ b/src/static/index.html
@@ -5,6 +5,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mergington High School Activities</title>
     <link rel="stylesheet" href="styles.css" />
+    <style>
+      body {
+        font-family: 'Segoe UI', Arial, sans-serif;
+        background: #f7f9fb;
+        margin: 0;
+        padding: 0;
+      }
+      .container {
+        max-width: 900px;
+        margin: 40px auto;
+        padding: 24px;
+      }
+      .activity-card {
+        background: #fff;
+        border-radius: 12px;
+        box-shadow: 0 2px 8px rgba(0,0,0,0.07);
+        margin-bottom: 32px;
+        padding: 28px 32px 20px 32px;
+        transition: box-shadow 0.2s;
+      }
+      .activity-card:hover {
+        box-shadow: 0 6px 24px rgba(0,0,0,0.13);
+      }
+      .activity-title {
+        font-size: 1.5em;
+        font-weight: 600;
+        color: #2b3a55;
+        margin-bottom: 8px;
+      }
+      .activity-description {
+        color: #4a5568;
+        margin-bottom: 8px;
+      }
+      .activity-schedule {
+        color: #6b7280;
+        font-size: 0.98em;
+        margin-bottom: 8px;
+      }
+      .activity-participants {
+        margin-top: 18px;
+        background: #f1f5fa;
+        border-radius: 8px;
+        padding: 12px 16px;
+      }
+      .participants-title {
+        font-size: 1.08em;
+        font-weight: 500;
+        color: #1e293b;
+        margin-bottom: 6px;
+      }
+      .participants-list {
+        margin: 0;
+        padding-left: 22px;
+      }
+      .participants-list li {
+        color: #334155;
+        font-size: 0.97em;
+        margin-bottom: 2px;
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -46,5 +106,30 @@
     </footer>
 
     <script src="app.js"></script>
+    <script>
+      async function loadActivities() {
+        const res = await fetch('/activities');
+        const activities = await res.json();
+        const container = document.getElementById('activities-container');
+        container.innerHTML = '';
+        Object.entries(activities).forEach(([name, data]) => {
+          const card = document.createElement('div');
+          card.className = 'activity-card';
+          card.innerHTML = `
+            <div class="activity-title">${name}</div>
+            <div class="activity-description">${data.description}</div>
+            <div class="activity-schedule"><strong>Schedule:</strong> ${data.schedule}</div>
+            <div class="activity-participants">
+              <div class="participants-title">Participants (${data.participants.length}):</div>
+              <ul class="participants-list">
+                ${data.participants.map(p => `<li>${p}</li>`).join('')}
+              </ul>
+            </div>
+          `;
+          container.appendChild(card);
+        });
+      }
+      loadActivities();
+    </script>
   </body>
 </html>
